            95%+: 0 SP

    ECM
        Based on the ECM percent of the fleet
            Yes, the ECM skill works
            <10%: Cant bypass
            >10%: 3 SP
            >=25%: 2 SP
            >=40%: 1 SP

        Reduces rep with the market owner, massively increases smuggling suspicion, and sends fleets to investigate you
        Easier to get than phase percent so harsher


3.0.3:
Removes the niko_MPC_convertObjectsToEnum command, the game should now automatically fix the bug

3.0.2:
Fixes intel crashes, use niko_MPC_convertObjectsToEnum command if updating from previous versions
Makes overgrown nanoforges a bit rarer
Overgrown nanoforges have 1 less intel tab

3.0.1:
Update to Starsector 0.97a

3.0.0:
INCOMPATABLE WITH PREVIOUS SAVES
Update to Starsector 0.96a-RC10

New condition: Overgrown Nanoforge:
    A old abandoned industial nanoforge, endlessly expanding in a grey-goo scenario. 
Adds industry: Overgrown Nanoforge
    Has a inherent costless and demandless output of goods
    Will continuously generate structures that augment it's stats
        Ex. A structure that increases the industry's supply output by 3, but increases upkeep by 2000 credits.
        A structure that increases accessibility, but lowers fuel output by 1.
    These structures do not instantly deconstruct, and the process of creation cannot be instantly stopped
        It takes time and money to do so
    Prior to construction, the effects of the structures become progressively more known as it nears the end
        Encourages you to make early judgements on if you want to start destroying it before it's made, at less cost
    
    The main industry is only destroyable once all connected structures are destroyed
        Once destroyed, you receive a unique nanoforge item that massively increases commodity output of any structure it's inserted into,
        but has various negative effects