@@ -12,7 +12,7 @@ Due to the accumulation factor, as well as the unpredictable nature of hyperspac
 ,,,,,,,
 Pre-Collapse STC Districts,niko_MPC_ftcDistricts,TRUE,FALSE,data.scripts.campaign.econ.conditions.niko_MPC_FTCDistricts,"$market was once a regional hub of space traffic, evidenced by the smattering of Space Traffic Control districts atop the surface. These collections of beuracracy harbor numerous p-switched sensor arrays, gravitic interstellar mapping systems, and tachyon-based communication systems - all of which are quite hard to come by in the modern sector. Sadly, the instruments are too delicate to properly move off world, but they may be used where they sit.
 
-Since space traffic in the post-collapse sector is thin enough to not need dedicated STC districts, the most effective use of these districts is a repurposing into general navigational and sensoral systems. As a bonus, these systems - due to their location - generate wildly different data than space-borne satellites, meaning they can both be used in tandem.",graphics/icons/markets/niko_MPC_STC.png,10
+Despite the rather thin traffic of the post-collapse sector, these districts can still be used to coordinate better flight paths across the system.",graphics/icons/markets/niko_MPC_STC.png,10
 Pre-Collapse Spy Arrays,niko_MPC_spyArrays,TRUE,FALSE,data.scripts.campaign.econ.conditions.niko_MPC_spyArrays,"$market's atmosphere gently glimmers with the shine of countless small stealth-coated satellites (marked innocently with a ""Ko Combine"" sticker) observing their surroundings, corroborating their findings with sensor panels tucked away in clandestine places, and submitting heaps of raw data to a long-dead supercomputer array, nestled neatly within the planet's crust.
 
 These sensor networks were often used in the fringe of domain space to keep an ""eye"" on unruly worlds, while supporting covert operations in the area. The domain never admitted their existance, and when pressed, would often talk of ""surveying equipment"" - nobody could disprove them, as nobody could find more than one satellite, panel, or computer at a time. 
