@@ -1,9 +1,9 @@
 id,group,rank,order,hazard,reqSurvey,xpMult,requiresAll,requiresAny,requiresNotAny,cat_giant,cat_barren,rocky_unstable,rocky_ice,cat_hab1,cat_lava,lava_minor,cat_frozen,cat_cryovolcanic,cat_irradiated,cat_toxic,toxic_cold,cat_hab5,cat_hab4,cat_hab3,terran-eccentric,jungle,water,arid,tundra,cat_hab2,multipliers >>>,tectonic_activity,extreme_tectonic_activity,low_gravity,high_gravity,hot,very_hot,cold,very_cold,dense_atmosphere,water_surface,mild_climate,extreme_weather,poor_light,inimical_biosphere,pollution,meteor_impacts
 niko_MPC_satellites_no_pick,niko_MPC_satellites,5,25,,,,,,,600,800,800,650,335,750,725,700,625,1000,1000,1200,350,335,320,290,280,350,500,400,200,,,,,,,,,,,,,,,,,
-niko_MPC_antiAsteroidSatellites_derelict,niko_MPC_satellites,5,25,,FALSE,48,,,,7,5,7,7,15,7,9,9,9,9,4,7,11,11,12,12,11,11,12,11,10,,,,1.5,0.5,,,,,0.8,,,,,,,3.5
+niko_MPC_antiAsteroidSatellites_derelict,niko_MPC_satellites,5,25,,FALSE,48,,,,12,15,10,10,20,10,12,12,9,13,4,7,11,11,12,23,20,11,12,11,10,,,,1.5,0.5,,,,,0.8,,,,,,,3.5
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 niko_MPC_overgrownNanoforge_no_pick,niko_MPC_overgrownNanoforge,5,30,,,,,,,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,,,,,,,,,,,,,,,,,
-niko_MPC_overgrownNanoforgeCondition,niko_MPC_overgrownNanoforge,5,30,,TRUE,90,,,,3,5,5,3,5,5,5,5,10,10,10,10,8,8,8,8,8,8,8,8,8,,0.9,0.5,,,,,,,,,,,,,,
+niko_MPC_overgrownNanoforgeCondition,niko_MPC_overgrownNanoforge,5,30,,TRUE,90,,,,5,8,8,8,8,8,8,5,10,10,10,10,10,10,10,10,10,10,10,10,10,,0.9,0.5,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 niko_MPC_ultraMagneticField_no_pick,niko_MPC_ultraMagneticField,5,35,,,,,,,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,,,,,,,,,,,,,,,,,
 niko_MPC_ultraMagneticField,niko_MPC_ultraMagneticField,5,35,,FALSE,40,,,,20,16,10,9,9,30,30,9,9,9,9,9,13,13,13,13,13,13,13,13,13,,,,0.5,3,,,,,,,,,,,,
@@ -11,8 +11,8 @@ niko_MPC_ultraMagneticField,niko_MPC_ultraMagneticField,5,35,,FALSE,40,,,,20,16,
 niko_MPC_hyperspaceBipartisan_no_pick,niko_MPC_hyperspaceBipartisan,5,40,,,,,,,10000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,,,,,,,,,,,,,,,,,
 niko_MPC_hyperspaceBipartisan,niko_MPC_hyperspaceBipartisan,5,40,,FALSE,78,,,,0,7,7,7,20,10,10,7,7,7,7,7,20,20,20,20,20,20,20,20,20,,,,0.5,3,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-niko_MPC_ftcDistricts_no_pick,niko_MPC_ftcDistricts,5,40,,,,,,,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,,,,,,,,,,,,,,,,,
-niko_MPC_ftcDistricts,niko_MPC_ftcDistricts,5,40,,TRUE,24,,,,30,30,30,30,40,30,30,30,30,30,30,30,40,40,40,40,40,40,40,40,40,,,,,,,,,,,,,,,,,
+niko_MPC_ftcDistricts_no_pick,niko_MPC_ftcDistricts,5,40,,,,,,,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,,,,,,,,,,,,,,,,,
+niko_MPC_ftcDistricts,niko_MPC_ftcDistricts,5,40,,TRUE,24,,,,40,40,40,40,60,100,40,40,40,40,40,40,100,100,100,100,100,100,100,100,100,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-niko_MPC_spyArrays_no_pick,niko_MPC_spyArrays,5,40,,,,,,,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,,,,,,,,,,,,,,,,,
-niko_MPC_spyArrays,niko_MPC_spyArrays,5,40,,TRUE,24,,,,30,30,30,30,40,30,30,30,30,30,30,30,40,40,40,40,40,40,40,40,40,,,,,,,,,,,,,,,,,
+niko_MPC_spyArrays_no_pick,niko_MPC_spyArrays,5,40,,,,,,,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,900,,,,,,,,,,,,,,,,,
+niko_MPC_spyArrays,niko_MPC_spyArrays,5,40,,TRUE,24,,,,40,40,40,40,60,100,40,40,40,40,40,40,100,100,100,100,100,100,100,100,100,,,,,,,,,,,,,,,,,
